# simplify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: config.yaml
docs/testcase-generator/: implementation-summary.md  implementation.md  screenshot-guide.md  testcase-generator.md
examples/: complete_workflow.py  screenshot_example.py
src/rnotes/: __init__.py
src/rnotes/images/: pillow_notes.py
src/rnotes/log_notes/: __init__.py  basic_logger.py
src/simplify/: __init__.py
src/testcase_generator/: __init__.py
src/testcase_generator/cli/: __init__.py  main.py
src/testcase_generator/cli/commands/: __init__.py  analyze.py  export.py  generate.py  manage.py
src/testcase_generator/core/: __init__.py  config.py  generator.py  models.py  project.py
src/testcase_generator/core/analyzers/: __init__.py
src/testcase_generator/core/generators/: __init__.py
src/testcase_generator/core/parsers/: __init__.py  api_specs.py  figma.py  requirements.py  screenshots.py
src/testcase_generator/utils/: __init__.py  config.py  logging.py  validators.py
tests/: conf.py  test_basic_structure.py  test_typer_integration.py
tests/rnotes/: test_basic_logger.py
