[project]
name = "simplify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DamnPatrick", email = "patrickwuke@163.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pillow>=11.3.0",
    "pytest>=8.4.2",
]

[project.scripts]
simplify = "simplify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
